# py-mail

./: .gitignore  00-py-mail.md  CLAUDE.md  GEMINI.md  OPERATIONS.md  SPECIFICATION.md  main.py  plantilla.env  pyproject.toml  roadmap.md
config/: config.toml  logging_config.py
data/: data_loader.py
domain/: models.py
mail/: outlook.py
services/: core_mailer.py  flujos_academicos.py  flujos_reportes.py  mailing.py
templates/: bienvenida_alumnos.html  bienvenida_alumnos_portugues.html  informe_semanal.html  inicio_docentes.html
tests/: __init__.py  test_data_loader.py
ui/: app.py
